Updated code for deployment

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -13,7 +13,7 @@
         Director
       </button>
       <button mat-button color="primary">
-        Synopsis
+        Summary
       </button>
       <mat-icon>favorite_border</mat-icon>
     </mat-card-actions>
