--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -13,9 +13,14 @@
         Director
       </button>
       <button mat-button color="primary">
-        Summary
+        Synopsis
       </button>
-      <mat-icon>favorite_border</mat-icon>
+      <button mat-button *ngIf="!isFav(movie._id)" (click)="addToFavoriteMovies(movie._id)" color="primary">
+        <mat-icon>favorite_border</mat-icon>
+      </button>
+      <button mat-button *ngIf="isFav(movie._id)" (click)="removeFromFavoriteMovies(movie._id)" color="primary">
+        <mat-icon>favorite_border</mat-icon>
+      </button>
     </mat-card-actions>
   </mat-card>
 </div>
