--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -6,19 +6,29 @@
     </mat-card-header>
     <img src={{movie.ImagePath}} alt={{movie.Title}} />
     <mat-card-actions>
-      <button mat-button color="primary">
+
+      <button mat-button color="primary" mat-button(click)="openGenreDialog(
+        movie.Genre.Name, movie.Genre.Description)">
         Genre
       </button>
-      <button mat-button color="primary">
+
+      <button mat-button color="primary" mat-button(click)="openDirectorDialog(
+        movie.Director.Name, movie.Director.Birthday, movie.Director.Bio)">
         Director
       </button>
-      <button mat-button color="primary">
+
+      <button mat-button color="primary" mat-button(click)="openSynopsisDiaglog(
+        movie.Description)">
         Synopsis
       </button>
-      <button mat-button *ngIf="!isFav(movie._id)" (click)="addToFavoriteMovies(movie._id)" color="primary">
+
+      <button mat-button *ngIf="!isFav(movie._id)" (click)="addToFavoriteMovies(
+        movie._id)" color="primary">
         <mat-icon>favorite_border</mat-icon>
       </button>
-      <button mat-button *ngIf="isFav(movie._id)" (click)="removeFromFavoriteMovies(movie._id)" color="primary">
+
+      <button mat-button *ngIf="isFav(movie._id)" (click)="removeFromFavoriteMovies(
+        movie._id)" color="primary">
         <mat-icon>favorite_border</mat-icon>
       </button>
     </mat-card-actions>
