--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -7,18 +7,16 @@
     <img src={{movie.ImagePath}} alt={{movie.Title}} />
     <mat-card-actions>
 
-      <button mat-button color="primary" mat-button(click)="openGenreDialog(
-        movie.Genre.Name, movie.Genre.Description)">
+      <button mat-button color="primary" (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)">
         Genre
       </button>
 
-      <button mat-button color="primary" mat-button(click)="openDirectorDialog(
-        movie.Director.Name, movie.Director.Birthday, movie.Director.Bio)">
+      <button mat-button color="primary"
+        (click)="openDirectorDialog(movie.Director.Name, movie.Director.Birthday, movie.Director.Bio)">
         Director
       </button>
 
-      <button mat-button color="primary" mat-button(click)="openSynopsisDialog(
-        movie.Description)">
+      <button mat-button color="primary" (click)="openSynopsisDialog(movie. Title, movie.Description)">
         Synopsis
       </button>
 
