--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -28,7 +28,7 @@
 
       <button mat-button *ngIf="isFav(movie._id)" (click)="removeFromFavoriteMovies(
         movie._id)" color="primary">
-        <mat-icon>favorite_border</mat-icon>
+        <mat-icon>favorite</mat-icon>
       </button>
     </mat-card-actions>
   </mat-card>
