--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -13,7 +13,7 @@
       </button>
 
       <button mat-button color="primary"
-        (click)="openDirectorDialog(movie.Director.Name, movie.Director.Birthday, movie.Director.Bio)">
+        (click)="openDirectorDialog(movie.Director.Name, movie.Director.Bio, movie.Director.Birth)">
         Director
       </button>
 
